--- a/2주차 (24.05.22)/2주차 과제 파일/practice/week2_practice.html
+++ b/2주차 (24.05.22)/2주차 과제 파일/practice/week2_practice.html
@@ -22,6 +22,7 @@
         font-size: 25px;
         }
     </style>
+    <!-- 유튜브 폰트는 yotybe sans 인데 일반인에게 배포 X (산세리프)  -->
     <link rel="icon" href="image/youtube_iocn.png">
 </head>
 <body>
@@ -123,13 +124,28 @@ flex-direction, flex-wrap의 순으로 한 칸 떼고 써주시면 됩니다.
 
 
 
-
     <img src="image/a_tag활용법.png">
 
+    <a href="https://jinyisland.kr/post/font/">-폰트참고-</a>
+    <div>구글 폰트에서 찾으면 된다</div>
   
-
+    <img src="image/font적용법.PNG">
+    <img src="image/폰트적용법2.PNG">
 
     <!--  -->
+
+    <pre style="text-align: center;">
+비트맵 이미지와 벡터 이미지 차이 
+벡터를 써야하는 이유
+    </pre>
+    <img src="image/비트맵.PNG">
+    <img src="image/비트맵2.PNG">
+    <img src="image/비트맵3.PNG">
+    <pre>
+        body 태그와 * 의 차이점을 알게 되었다
+        -> body로 안되는 부분을 * 해결하기도 함 
+        내 코드의 경우 input value 값이 body 안에 있었지만 자식이기에 설정이 안된것으로 보인다
+    </pre>
 
 </body>
 </html>
