--- a/2주차 (24.05.22)/2주차 과제 파일/youtube_clone.html
+++ b/2주차 (24.05.22)/2주차 과제 파일/youtube_clone.html
@@ -49,7 +49,7 @@
     <div id="main_group" class="container_column">
         <header class="headerimg_center">
             <!-- 유튜브 로고 -->
-            <div class="container_center ">
+            <div id="youtube_logo" class="container_center ">
                 <img src="image/png/header.youtube_img.png">
             </div>
             <!-- 유튜브 검색창 -->
@@ -89,7 +89,7 @@
                 <div class="container_center">
                     <img src="image/png/main.playname_img.PNG">
                     <div>
-                        <p>𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
+                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
                         <p class="text_font">올끌 (All of MBClassic)</p>
                         <div class="text_font">
                             <span>조회수 44만회</span>
@@ -104,7 +104,7 @@
                 <div class="container_center">
                     <img src="image/png/main.playname_img.PNG">
                     <div>
-                        <p>𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
+                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
                         <p class="text_font">올끌 (All of MBClassic)</p>
                         <div class="text_font">
                             <span>조회수 44만회</span>
@@ -119,7 +119,7 @@
                 <div class="container_center">
                     <img src="image/png/main.playname_img.PNG">
                     <div>
-                        <p>𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
+                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
                         <p class="text_font">올끌 (All of MBClassic)</p>
                         <div class="text_font">
                             <span>조회수 44만회</span>
@@ -134,7 +134,7 @@
                 <div class="container_center">
                     <img src="image/png/main.playname_img.PNG">
                     <div>
-                        <p>𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
+                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
                         <p class="text_font">올끌 (All of MBClassic)</p>
                         <div class="text_font">
                             <span>조회수 44만회</span>
@@ -149,7 +149,7 @@
                 <div class="container_center">
                     <img src="image/png/main.playname_img.PNG">
                     <div>
-                        <p>𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
+                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
                         <p class="text_font">올끌 (All of MBClassic)</p>
                         <div class="text_font">
                             <span>조회수 44만회</span>
@@ -164,7 +164,7 @@
                 <div class="container_center">
                     <img src="image/png/main.playname_img.PNG">
                     <div>
-                        <p>𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
+                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
                         <p class="text_font">올끌 (All of MBClassic)</p>
                         <div class="text_font">
                             <span>조회수 44만회</span>
@@ -179,7 +179,7 @@
                 <div class="container_center">
                     <img src="image/png/main.playname_img.PNG">
                     <div>
-                        <p>𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
+                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
                         <p class="text_font">올끌 (All of MBClassic)</p>
                         <div class="text_font">
                             <span>조회수 44만회</span>
@@ -194,7 +194,7 @@
                 <div class="container_center">
                     <img src="image/png/main.playname_img.PNG">
                     <div>
-                        <p>𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
+                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
                         <p class="text_font">올끌 (All of MBClassic)</p>
                         <div class="text_font">
                             <span>조회수 44만회</span>
@@ -209,7 +209,7 @@
                 <div class="container_center">
                     <img src="image/png/main.playname_img.PNG">
                     <div>
-                        <p>𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
+                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
                         <p class="text_font">올끌 (All of MBClassic)</p>
                         <div class="text_font">
                             <span>조회수 44만회</span>
@@ -224,7 +224,7 @@
                 <div class="container_center">
                     <img src="image/png/main.playname_img.PNG">
                     <div>
-                        <p>𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
+                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
                         <p class="text_font">올끌 (All of MBClassic)</p>
                         <div class="text_font">
                             <span>조회수 44만회</span>
@@ -239,7 +239,7 @@
                 <div class="container_center">
                     <img src="image/png/main.playname_img.PNG">
                     <div>
-                        <p>𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
+                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
                         <p class="text_font">올끌 (All of MBClassic)</p>
                         <div class="text_font">
                             <span>조회수 44만회</span>
@@ -254,7 +254,7 @@
                 <div class="container_center">
                     <img src="image/png/main.playname_img.PNG">
                     <div>
-                        <p>𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
+                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
                         <p class="text_font">올끌 (All of MBClassic)</p>
                         <div class="text_font">
                             <span>조회수 44만회</span>
@@ -269,7 +269,7 @@
                 <div class="container_center">
                     <img src="image/png/main.playname_img.PNG">
                     <div>
-                        <p>𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
+                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
                         <p class="text_font">올끌 (All of MBClassic)</p>
                         <div class="text_font">
                             <span>조회수 44만회</span>
@@ -284,7 +284,7 @@
                 <div class="container_center">
                     <img src="image/png/main.playname_img.PNG">
                     <div>
-                        <p>𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
+                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
                         <p class="text_font">올끌 (All of MBClassic)</p>
                         <div class="text_font">
                             <span>조회수 44만회</span>
@@ -299,7 +299,7 @@
                 <div class="container_center">
                     <img src="image/png/main.playname_img.PNG">
                     <div>
-                        <p>𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
+                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
                         <p class="text_font">올끌 (All of MBClassic)</p>
                         <div class="text_font">
                             <span>조회수 44만회</span>
