fix css background

--- a/2주차 (24.05.22)/2주차 과제 파일/youtube_clone.html
+++ b/2주차 (24.05.22)/2주차 과제 파일/youtube_clone.html
@@ -69,7 +69,9 @@
                         <img src="image/png/header.search_img.PNG">
                     </button>
                 </div>
-                <img src="image/png/header.mic_img.png">
+                <button id="mic_btn" class="container_center">
+                    <img  src="image/png/header.mic_img.png">
+                </button>
 
             </div>
             <!-- 우측 아이콘 -->
