--- a/2주차 (24.05.22)/2주차 과제 파일/youtube_clone.html
+++ b/2주차 (24.05.22)/2주차 과제 파일/youtube_clone.html
@@ -6,7 +6,7 @@
     <!-- 제목 -->
     <title>YouTube</title>
     <!-- 아이콘 설정 -->
-    <link rel="icon" href="image/svg/youtube_iocn.svg">
+    <link rel="icon" href="image/png/header.youtube_icon.png">
     <!-- css 적용 -->
     <link rel="stylesheet" type="text/css" href="yotube_clone.css">
     <!-- 폰트적용 -->
@@ -17,30 +17,30 @@
 <body>
     <!-- 어사이드 -->
     <aside class="aside_shape"> 
-        <div class="container_center aside_img_margin_top"  >
+        <div class="container_center aside_img_margin_top cursor_pointer"  >
             <img class="aside_width aside_img_margin_top" src="image/png/header.line_img.png" >
         </div>
-        <div class="aside_img">
+        <div class="aside_img cursor_pointer">
             <img class="aside_width" src="image/png/aside.home.PNG">
             <P class="aside_img_margin_top">홈</P>
         </div>
-        <div class="aside_img">
+        <div class="aside_img cursor_pointer">
             <img class="aside_width" src="image/png/aside.shorts.PNG">
             <P class="aside_img_margin_top">shorts</P>
         </div>
-        <div class="aside_img">
+        <div class="aside_img cursor_pointer">
             <img class="aside_width" src="image/png/aside.subscribe.PNG">
             <P class="aside_img_margin_top">구독</P>
         </div>
-        <div class="aside_img">
+        <div class="aside_img cursor_pointer">
             <img class="aside_width" src="image/png/aside.music.PNG">
             <P class="aside_img_margin_top">Youtube Mu...</P>
         </div>
-        <div class="aside_img">
+        <div class="aside_img cursor_pointer">
             <img class="aside_width" src="image/png/aside.me.PNG">
             <P class="aside_img_margin_top">나</P>
         </div>
-        <div class="aside_img">
+        <div class="aside_img cursor_pointer">
             <img class="aside_width" src="image/png/aside.save.PNG">
             <P class="aside_img_margin_top">오프라인 저...</P>
         </div>
@@ -49,9 +49,12 @@
     <div id="main_group" class="container_column">
         <header class="headerimg_center">
             <!-- 유튜브 로고 -->
-            <div id="youtube_logo" class="container_center ">
-                <img src="image/png/header.youtube_img.png">
-            </div>
+            <a href="youtube_clone.html">
+                <div class="container_center cursor_pointer">
+                    <img src="image/png/header.youtube_img.png">
+                </div>
+            </a>
+
             <!-- 유튜브 검색창 -->
             <div id="search_out_shape">
                 <div id="space"></div>
@@ -62,23 +65,23 @@
                         </button>
                         <input id="search_btn_text" type="text"  placeholder="  검색">
                         <button id="keyboard_btn" type="button">
-                            <img src="image/png/header.keyboard_img.PNG">
+                            <img class="cursor_pointer" src="image/png/header.keyboard_img.PNG">
                         </button>
                     </div>
-                    <button id="search_btn" type="button">
+                    <button id="search_btn" class="cursor_pointer" type="button">
                         <img src="image/png/header.search_img.PNG">
                     </button>
                 </div>
-                <button id="mic_btn" class="container_center">
+                <button id="mic_btn" class="container_center cursor_pointer">
                     <img  src="image/png/header.mic_img.png">
                 </button>
 
             </div>
             <!-- 우측 아이콘 -->
             <div class="container_center">
-                <img src="image/png/header.camera_img.png">
-                <img class="margin_img" src="image/png/header.bell_img.png">
-                <img src="image/png/header.name_img.png">
+                <img class="cursor_pointer" src="image/png/header.camera_img.png">
+                <img class="margin_img cursor_pointer" src="image/png/header.bell_img.png">
+                <img class="cursor_pointer" src="image/png/header.name_img.png">
             </div>
 
         </header>
@@ -86,232 +89,7 @@
         <!-- 메인 페이지 -->
         <main id="main">
             <!-- 유튜브 썸네일-->
-            <div class=" main_group_shape">
-                <img class="main_img" src="image/png/main.play_img.PNG">
-                <div class="container_center">
-                    <img src="image/png/main.playname_img.PNG">
-                    <div>
-                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
-                        <p class="text_font">올끌 (All of MBClassic)</p>
-                        <div class="text_font">
-                            <span>조회수 44만회</span>
-                            <span>•</span>
-                            <span>8개월 전</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class=" main_group_shape">
-                <img class="main_img" src="image/png/main.play_img.PNG">
-                <div class="container_center">
-                    <img src="image/png/main.playname_img.PNG">
-                    <div>
-                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
-                        <p class="text_font">올끌 (All of MBClassic)</p>
-                        <div class="text_font">
-                            <span>조회수 44만회</span>
-                            <span>•</span>
-                            <span>8개월 전</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class=" main_group_shape">
-                <img class="main_img" src="image/png/main.play_img.PNG">
-                <div class="container_center">
-                    <img src="image/png/main.playname_img.PNG">
-                    <div>
-                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
-                        <p class="text_font">올끌 (All of MBClassic)</p>
-                        <div class="text_font">
-                            <span>조회수 44만회</span>
-                            <span>•</span>
-                            <span>8개월 전</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class=" main_group_shape">
-                <img class="main_img" src="image/png/main.play_img.PNG">
-                <div class="container_center">
-                    <img src="image/png/main.playname_img.PNG">
-                    <div>
-                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
-                        <p class="text_font">올끌 (All of MBClassic)</p>
-                        <div class="text_font">
-                            <span>조회수 44만회</span>
-                            <span>•</span>
-                            <span>8개월 전</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class=" main_group_shape">
-                <img class="main_img" src="image/png/main.play_img.PNG">
-                <div class="container_center">
-                    <img src="image/png/main.playname_img.PNG">
-                    <div>
-                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
-                        <p class="text_font">올끌 (All of MBClassic)</p>
-                        <div class="text_font">
-                            <span>조회수 44만회</span>
-                            <span>•</span>
-                            <span>8개월 전</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class=" main_group_shape">
-                <img class="main_img" src="image/png/main.play_img.PNG">
-                <div class="container_center">
-                    <img src="image/png/main.playname_img.PNG">
-                    <div>
-                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
-                        <p class="text_font">올끌 (All of MBClassic)</p>
-                        <div class="text_font">
-                            <span>조회수 44만회</span>
-                            <span>•</span>
-                            <span>8개월 전</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class=" main_group_shape">
-                <img class="main_img" src="image/png/main.play_img.PNG">
-                <div class="container_center">
-                    <img src="image/png/main.playname_img.PNG">
-                    <div>
-                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
-                        <p class="text_font">올끌 (All of MBClassic)</p>
-                        <div class="text_font">
-                            <span>조회수 44만회</span>
-                            <span>•</span>
-                            <span>8개월 전</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class=" main_group_shape">
-                <img class="main_img" src="image/png/main.play_img.PNG">
-                <div class="container_center">
-                    <img src="image/png/main.playname_img.PNG">
-                    <div>
-                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
-                        <p class="text_font">올끌 (All of MBClassic)</p>
-                        <div class="text_font">
-                            <span>조회수 44만회</span>
-                            <span>•</span>
-                            <span>8개월 전</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class=" main_group_shape">
-                <img class="main_img" src="image/png/main.play_img.PNG">
-                <div class="container_center">
-                    <img src="image/png/main.playname_img.PNG">
-                    <div>
-                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
-                        <p class="text_font">올끌 (All of MBClassic)</p>
-                        <div class="text_font">
-                            <span>조회수 44만회</span>
-                            <span>•</span>
-                            <span>8개월 전</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class=" main_group_shape">
-                <img class="main_img" src="image/png/main.play_img.PNG">
-                <div class="container_center">
-                    <img src="image/png/main.playname_img.PNG">
-                    <div>
-                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
-                        <p class="text_font">올끌 (All of MBClassic)</p>
-                        <div class="text_font">
-                            <span>조회수 44만회</span>
-                            <span>•</span>
-                            <span>8개월 전</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class=" main_group_shape">
-                <img class="main_img" src="image/png/main.play_img.PNG">
-                <div class="container_center">
-                    <img src="image/png/main.playname_img.PNG">
-                    <div>
-                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
-                        <p class="text_font">올끌 (All of MBClassic)</p>
-                        <div class="text_font">
-                            <span>조회수 44만회</span>
-                            <span>•</span>
-                            <span>8개월 전</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class=" main_group_shape">
-                <img class="main_img" src="image/png/main.play_img.PNG">
-                <div class="container_center">
-                    <img src="image/png/main.playname_img.PNG">
-                    <div>
-                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
-                        <p class="text_font">올끌 (All of MBClassic)</p>
-                        <div class="text_font">
-                            <span>조회수 44만회</span>
-                            <span>•</span>
-                            <span>8개월 전</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class=" main_group_shape">
-                <img class="main_img" src="image/png/main.play_img.PNG">
-                <div class="container_center">
-                    <img src="image/png/main.playname_img.PNG">
-                    <div>
-                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
-                        <p class="text_font">올끌 (All of MBClassic)</p>
-                        <div class="text_font">
-                            <span>조회수 44만회</span>
-                            <span>•</span>
-                            <span>8개월 전</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class=" main_group_shape">
-                <img class="main_img" src="image/png/main.play_img.PNG">
-                <div class="container_center">
-                    <img src="image/png/main.playname_img.PNG">
-                    <div>
-                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
-                        <p class="text_font">올끌 (All of MBClassic)</p>
-                        <div class="text_font">
-                            <span>조회수 44만회</span>
-                            <span>•</span>
-                            <span>8개월 전</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class=" main_group_shape">
-                <img class="main_img" src="image/png/main.play_img.PNG">
-                <div class="container_center">
-                    <img src="image/png/main.playname_img.PNG">
-                    <div>
-                        <p class="main_text_line">𝐏𝐥𝐚𝐲𝐥𝐢𝐬𝐭 돌아가고 싶은 그때 그 시절 2010년 감성힙합 I 다이나믹듀오, 프라이머리, 긱스, 개리, 빈지노</p>
-                        <p class="text_font">올끌 (All of MBClassic)</p>
-                        <div class="text_font">
-                            <span>조회수 44만회</span>
-                            <span>•</span>
-                            <span>8개월 전</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+            <!-- 자바스크립트로 생성 -->
     </main>
 </body>
 </html>
