--- a/2주차 (24.05.22)/2주차 과제 파일/youtube_clone.html
+++ b/2주차 (24.05.22)/2주차 과제 파일/youtube_clone.html
@@ -13,7 +13,12 @@
     <link rel="stylesheet" type="text/css" href="youtube_font.css">
     <!-- 자바스크립트 적용 -->
     <script async src="youtube_clone.js"></script>
+    <script async src="youtube_api.js"></script>
+
 </head>
+
+<!-- oocs 방식 css 중심 클래스 생성후 태그에 넣는 방식-->
+
 <body>
     <!-- 어사이드 -->
     <aside class="aside_shape"> 
@@ -47,14 +52,13 @@
     </aside>
     <!-- 헤더 -->
     <div id="main_group" class="container_column">
-        <header class="headerimg_center">
+        <header id="header"class="headerimg_center">
             <!-- 유튜브 로고 -->
             <a href="youtube_clone.html">
                 <div class="container_center cursor_pointer">
                     <img src="image/png/header.youtube_img.png">
                 </div>
             </a>
-
             <!-- 유튜브 검색창 -->
             <div id="search_out_shape">
                 <div id="space"></div>
