--- a/2주차 (24.05.22)/2주차 과제 파일/youtube_clone.html
+++ b/2주차 (24.05.22)/2주차 과제 파일/youtube_clone.html
@@ -11,9 +11,7 @@
     <link rel="stylesheet" type="text/css" href="yotube_clone.css">
     <!-- 폰트적용 -->
     <link rel="stylesheet" type="text/css" href="youtube_font.css">
-    <!-- 자바스크립트 적용 -->
-    <script async src="youtube_clone.js"></script>
-    <script async src="youtube_api.js"></script>
+    
 
 </head>
 
@@ -23,35 +21,35 @@
     <!-- 어사이드 -->
     <aside class="aside_shape"> 
         <div class="container_center aside_img_margin_top cursor_pointer"  >
-            <img class="aside_width aside_img_margin_top" src="image/png/header.line_img.png" >
+            <img class=" aside_img_margin_top" src="image/png/header.line_img.png" >
         </div>
         <div class="aside_img cursor_pointer">
-            <img class="aside_width" src="image/png/aside.home.PNG">
+            <img src="image/png/aside.home.PNG">
             <P class="aside_img_margin_top">홈</P>
         </div>
         <div class="aside_img cursor_pointer">
-            <img class="aside_width" src="image/png/aside.shorts.PNG">
+            <img src="image/png/aside.shorts.PNG">
             <P class="aside_img_margin_top">shorts</P>
         </div>
         <div class="aside_img cursor_pointer">
-            <img class="aside_width" src="image/png/aside.subscribe.PNG">
+            <img src="image/png/aside.subscribe.PNG">
             <P class="aside_img_margin_top">구독</P>
         </div>
         <div class="aside_img cursor_pointer">
-            <img class="aside_width" src="image/png/aside.music.PNG">
+            <img src="image/png/aside.music.PNG">
             <P class="aside_img_margin_top">Youtube Mu...</P>
         </div>
         <div class="aside_img cursor_pointer">
-            <img class="aside_width" src="image/png/aside.me.PNG">
+            <img src="image/png/aside.me.PNG">
             <P class="aside_img_margin_top">나</P>
         </div>
         <div class="aside_img cursor_pointer">
-            <img class="aside_width" src="image/png/aside.save.PNG">
+            <img  src="image/png/aside.save.PNG">
             <P class="aside_img_margin_top">오프라인 저...</P>
         </div>
     </aside>
     <!-- 헤더 -->
-    <div id="main_group" class="container_column">
+    <div id="main_group"  style="position: fixed; width: 100%;">
         <header id="header"class="headerimg_center">
             <!-- 유튜브 로고 -->
             <a href="youtube_clone.html">
@@ -82,18 +80,23 @@
 
             </div>
             <!-- 우측 아이콘 -->
-            <div class="container_center">
+            <div class="container_center" style="margin-right: 80px;">
                 <img class="cursor_pointer" src="image/png/header.camera_img.png">
                 <img class="margin_img cursor_pointer" src="image/png/header.bell_img.png">
                 <img class="cursor_pointer" src="image/png/header.name_img.png">
             </div>
 
         </header>
-
-        <!-- 메인 페이지 -->
-        <main id="main">
-            <!-- 유튜브 썸네일-->
-            <!-- 자바스크립트로 생성 -->
+    </div>
+     <!-- 메인 페이지 -->
+     <main id="main_thumb">
+        <!-- 유튜브 썸네일-->
+        <!-- 자바스크립트로 생성 -->
     </main>
+
+    <!-- 자바스크립트 적용 -->
+    <script async src="youtube_clone.js"></script>
+    <script async src="youtube_api.js"></script>
+
 </body>
 </html>
