rangking system ui

--- a/3주차 (24.05.29)/3주차 과제 파일/number_baseball.html
+++ b/3주차 (24.05.29)/3주차 과제 파일/number_baseball.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>숫자야구</title>
-    <link rel="icon" href="image/baseballl_icon_title_img.png">
+    <title>스테이지어스 - 모바일</title>
+    <link rel="icon" href="image/stageus_logo.png">
     <link rel="stylesheet" type="text/css" href="number_baseball.css">
 </head>
 <body>
@@ -23,8 +23,8 @@
             <img id="intro_img" src="image/baseball_icon_main.png">
             <img id="intro_loading_img" src="image/intro_lading_gif.gif">
         </div>
-        
 
+        <!-- 메인화면창  -->
         <div id="main_page">
             <div id="main_top_box">
                 <img id="main_page_logo" src="image/stageus_logo_white.png">
@@ -52,8 +52,17 @@
             <div id="result">숫자야구</div>
         <div id="main_game_bottom">
         </div>
+        </div>
+
+    <!-- 점수창 -->
+    <div id="score_board_title">
+        <p id="score_board_title_text">-랭킹-</p>
     </div>
-        
+    <div id="score_board">
+    </div>
+    <button id="score_page_back_btn">뒤로가기
+    </button>
+
     </main>
     <p id="solve"></p>
     <p id="present"></p>
